--- a/.classpath
+++ b/.classpath
@@ -63,9 +63,6 @@
 	<classpathentry kind="src" path="src/plugin/urlnormalizer-pass/src/test"/>
 	<classpathentry kind="src" path="src/plugin/urlnormalizer-regex/src/java"/>
 	<classpathentry kind="src" path="src/plugin/urlnormalizer-regex/src/test"/>
-	<classpathentry kind="lib" path="conf"/>
-	<classpathentry kind="lib" path="src/bin"/>
-	<classpathentry kind="lib" path="build/lib/aopalliance-1.0.jar"/>
 	<classpathentry kind="lib" path="runtime/local/lib/aopalliance-1.0.jar"/>
 	<classpathentry kind="lib" path="runtime/local/lib/asm-3.2.jar"/>
 	<classpathentry kind="lib" path="runtime/local/lib/avro-1.3.3.jar"/>
@@ -151,18 +148,78 @@
 	<classpathentry kind="lib" path="runtime/local/lib/woodstox-core-asl-4.1.1.jar"/>
 	<classpathentry kind="lib" path="runtime/local/lib/wsdl4j-1.6.2.jar"/>
 	<classpathentry kind="lib" path="runtime/local/lib/wstx-asl-3.2.7.jar"/>
-	<classpathentry kind="lib" path="runtime/local/lib/xercesImpl-2.9.1.jar"/>
 	<classpathentry kind="lib" path="runtime/local/lib/xml-apis-1.3.04.jar"/>
 	<classpathentry kind="lib" path="runtime/local/lib/xmlenc-0.52.jar"/>
 	<classpathentry kind="lib" path="runtime/local/lib/xmlParserAPIs-2.6.2.jar"/>
 	<classpathentry kind="lib" path="runtime/local/lib/xmlschema-core-2.0.1.jar"/>
 	<classpathentry kind="lib" path="runtime/local/lib/zookeeper-3.3.1.jar"/>
-	<classpathentry kind="lib" path="/apache-nutch-2.3/build/plugins/lib-nekohtml/nekohtml-1.9.19.jar"/>
 	<classpathentry kind="lib" path="/hadoop-1.0.3/lib/jasper-compiler-5.5.12.jar"/>
 	<classpathentry kind="lib" path="/apache-nutch-2.3/build/plugins/urlfilter-automaton/automaton-1.11-8.jar"/>
-	<classpathentry kind="lib" path="/apache-nutch-2.3/build/plugins/protocol-sftp/jsch-0.1.41.jar"/>
 	<classpathentry kind="lib" path="build/parse-html/parse-html.jar"/>
 	<classpathentry kind="lib" path="build/plugins/parse-html/tagsoup-1.2.jar"/>
-	<classpathentry kind="lib" path="/apache-nutch-2.3/build/plugins/parse-tika/tika-parsers-1.6.jar"/>
+	<classpathentry kind="lib" path="runtime/local/conf"/>
+	<classpathentry kind="lib" path="lib/plugins/apache-mime4j-core-0.7.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/apache-mime4j-dom-0.7.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/asm-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/automaton.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/bcmail-jdk15-1.45.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/bcprov-jdk15-1.45.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/boilerpipe-1.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/commons-compress-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/commons-net-1.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/creativecommons.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/fontbox-1.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/index-anchor.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/index-basic.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/index-more.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/jaxen-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/jempbox-1.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/jsch-0.1.41.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/language-identifier.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/lib-http.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/lib-regex-filter.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/lib-xml.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/metadata-extractor-2.4.0-beta-1.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/microformats-reltag.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/nekohtml-0.9.5.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/netcdf-4.2-min.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/nutch-extensionpoints.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/parse-html.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/parse-js.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/parse-tika.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/pdfbox-1.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/poi-3.8-beta4.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/poi-ooxml-3.8-beta4.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/poi-ooxml-schemas-3.8-beta4.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/poi-scratchpad-3.8-beta4.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/protocol-file.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/protocol-ftp.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/protocol-http.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/protocol-httpclient.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/protocol-sftp.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/rome-0.9.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/scoring-link.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/scoring-opic.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/slf4j-api-1.5.6.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/subcollection.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/tagsoup-1.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/tagsoup-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/tika-parsers-0.10.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/tld.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/urlfilter-automaton.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/urlfilter-domain.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/urlfilter-prefix.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/urlfilter-regex.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/urlfilter-suffix.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/urlfilter-validator.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/urlnormalizer-basic.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/urlnormalizer-pass.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/urlnormalizer-regex.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/xercesImpl-2.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/plugins/xmlbeans-2.3.0.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
