--- a/build.xml
+++ b/build.xml
@@ -21,8 +21,12 @@
  <!-- Load all the default properties, and any the user wants -->
  <!-- to contribute (without having to type -D or edit this file -->
  <property file="${user.home}/build.properties" />
- <property file="${basedir}/default.properties" />
+ 
+ <!-- local properties -->
  <property file="${basedir}/build.properties" />
+ 
+ <!-- Nutch default properties -->
+ <property file="${basedir}/default.properties" />
  <property name="test.junit.output.format" value="plain" />
  <property name="release.dir" value="${build.dir}/release" />
 
@@ -61,6 +65,7 @@
  <!-- ====================================================== -->
  <!-- Stuff needed by all targets -->
  <!-- ====================================================== -->
+ <echo message="using conf dir: ${conf.dir}" />
  <target name="init" depends="ivy-init" description="--> stuff required by all targets">
   <mkdir dir="${build.dir}" />
   <mkdir dir="${build.classes}" />
