--- a/.classpath
+++ b/.classpath
@@ -69,7 +69,6 @@
 	<classpathentry kind="src" path="src/plugin/urlnormalizer-regex/src/java"/>
 	<classpathentry kind="src" path="src/plugin/urlnormalizer-regex/src/test"/>
 	<classpathentry kind="lib" path="runtime/local/lib/aopalliance-1.0.jar"/>
-	<classpathentry kind="lib" path="runtime/local/lib/avro-1.3.3.jar"/>
 	<classpathentry kind="lib" path="runtime/local/lib/common-util-1.0.2.jar"/>
 	<classpathentry kind="lib" path="runtime/local/lib/commons-beanutils-1.7.0.jar"/>
 	<classpathentry kind="lib" path="runtime/local/lib/commons-beanutils-core-1.8.0.jar"/>
@@ -218,5 +217,6 @@
 	<classpathentry kind="lib" path="lib/plugins/xmlbeans-2.3.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/atire_jni"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/AtireJ"/>
+	<classpathentry kind="lib" path="lib/avro-1.4.1.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
